# coronary-centerline-detection

./: .gitignore  BATCH_SIZE_ANALYSIS.md  README.md  RESUME_BATCHES.md  analyze_batch_sizes.py  benchmark_gpu_cpu.py  comands.md  environment.yml  pyproject.toml  tmp.txt
config/: README.md  parâmetros_especialistas.txt  pipeline_config.json
doc/: Fluxograma das etapas centerline.md  Relatorio das etapas realizadas.md
output/: ostios_train_summary.csv  ostios_train_summary_ostio-frangi1-5_order1.csv  ostios_train_summary_ostio-frangi2-5_order1.csv
output/cases_analysis_3d/: img_171_mid_low_dice_aorta_ostios.html  img_171_mid_low_dice_arteries_comparison.html  img_372_mid_none_correct_aorta_ostios.html  img_372_mid_none_correct_arteries_comparison.html  img_561_mid_one_correct_aorta_ostios.html  img_561_mid_one_correct_arteries_comparison.html  img_595_high_low_dice_arteries_comparison.html  img_595_mid_low_dice_aorta_ostios.html  img_595_mid_low_dice_arteries_comparison.html  img_75_mid_one_correct_aorta_ostios.html  img_75_mid_one_correct_arteries_comparison.html  img_916_high_none_correct_arteries_comparison.html  img_916_mid_none_correct_aorta_ostios.html  img_916_mid_none_correct_arteries_comparison.html
output/segmented_ostios/: 10_aorta_ostia.html  134_aorta_ostia.html  195_aorta_ostia.html  1_aorta_ostia.html  (+9 more)
src/: __init__.py  cases_analysis.ipynb  dice_score_consolidado.ipynb  eda_bad_tests.ipynb  eda_downscale_method.ipynb  eda_imgs.ipynb  eda_segmentacao.ipynb  eda_tests.ipynb  main.ipynb  segmentacao_arteria.ipynb  segmentation_pipeline.py
(+373 files in other folders)
