[project]
name = "coronary-centerline-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "k3d>=2.17.0",
    "matplotlib>=3.10.5",
    "morphsnakes>=2.0.1",
    "nbformat>=5.10.4",
    "nibabel>=5.3.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pip>=25.3",
    "plotly>=6.3.0",
    "ruff>=0.14.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
